# cantina-autonomous-drone

./: .gitignore  README.md  actuator_control_test.py  build.sh  first_build.sh  mav_with_camera.gazebo  mav_with_camera.launch  red_cube.sdf  setup.sh  setup_aws_cpp_sdk.sh  setup_dependencies.sh  setup_dev_env.sh  setup_ros.sh  static_red_cube.world  static_red_square.world
archive/: mav_with_camera.gazebo  mav_with_camera.launch
archive/rl_deeprotor_robomaker_coach_gazebo/src/markov/: deeprotor_memory.py  evaluation_worker.py
archive/rl_deeprotor_robomaker_coach_gazebo/src/markov/presets/: default.py  preset_attention_layer.py
deeprotor-simapp/: installers.json
deeprotor-simapp/bundle/opt/install/rotors_simulator/: .rosinstall  local_setup.sh  setup.sh
deeprotor-simapp/bundle/opt/ros/kinetic/: _setup_util.py
deeprotor-simapp/bundle/usr/include/: mpi4py  tinyxml2.h
deeprotor-simapp/bundle/usr/include/PySide2/: pyside2_global.h
deeprotor-simapp/bundle/usr/include/PySide2/QtConcurrent/: pyside2_qtconcurrent_python.h
deeprotor-simapp/bundle/usr/include/PySide2/QtCore/: pyside2_qtcore_python.h
deeprotor-simapp/bundle/usr/include/PySide2/QtGui/: pyside2_qtgui_python.h
deeprotor-simapp/bundle/usr/include/PySide2/QtHelp/: pyside2_qthelp_python.h
deeprotor-simapp/bundle/usr/include/PySide2/QtNetwork/: pyside2_qtnetwork_python.h
deeprotor-simapp/bundle/usr/include/PySide2/QtPrintSupport/: pyside2_qtprintsupport_python.h
deeprotor-simapp/bundle/usr/include/PySide2/QtQml/: pyside2_qtqml_python.h
deeprotor-simapp/bundle/usr/include/PySide2/QtQuick/: pyside2_qtquick_python.h
deeprotor-simapp/bundle/usr/include/PySide2/QtQuickWidgets/: pyside2_qtquickwidgets_python.h
deeprotor-simapp/bundle/usr/include/PySide2/QtScript/: pyside2_qtscript_python.h
deeprotor-simapp/bundle/usr/include/PySide2/QtScriptTools/: pyside2_qtscripttools_python.h
deeprotor-simapp/bundle/usr/include/PySide2/QtSql/: pyside2_qtsql_python.h
deeprotor-simapp/bundle/usr/include/PySide2/QtSvg/: pyside2_qtsvg_python.h
deeprotor-simapp/bundle/usr/include/gdal/: cpl_config.h
deeprotor-simapp/bundle/usr/include/hdf5/openmpi/: H5pubconf.h
deeprotor-simapp/bundle/usr/include/jasper/: jas_image.h  jas_math.h  jas_seq.h
deeprotor-simapp/bundle/usr/include/postgresql/: pg_config.h
deeprotor-simapp/bundle/usr/include/python3.5dm/: sip.h
deeprotor-simapp/bundle/usr/include/vtk-6.2/: vtkConfigure.h  vtkIOMPIParallelModule.h  vtkPythonConfigure.h  vtk_glew.h  vtkgl.h
deeprotor-simapp/bundle/usr/lib/: libPocoCrypto.so.9  libPocoData.so.9  libPocoMySQL.so.9  libPocoNet.so.9  libPocoNetSSL.so.9  libPocoODBC.so.9  libPocoSQLite.so.9  libPocoUtil.so.9  libPocoXML.so.9  libPocoZip.so.9  libspnav.so.0.1
deeprotor-simapp/bundle/usr/lib/pkgconfig/: aws-cpp-sdk-core.pc  aws-cpp-sdk-kinesis.pc  aws-cpp-sdk-logs.pc  gdal.pc  tbb.pc  urdfdom_headers.pc
deeprotor-simapp/bundle/usr/lib/python2.7/: sitecustomize.py
deeprotor-simapp/bundle/usr/lib/python3.5/: sitecustomize.py
deeprotor-simapp/bundle/usr/lib/ssl/: certs  openssl.cnf  private
deeprotor-simapp/bundle/usr/lib/x86_64-linux-gnu/: libOgreOverlay.so.1.9.0  libOgrePaging.so.1.9.0  libOgreProperty.so.1.9.0  libOgreRTShaderSystem.so.1.9.0  libOgreTerrain.so.1.9.0  libOgreVolume.so.1.9.0  libQt3Support.prl  libQt5CLucene.prl  libQt5CLucene.so.5.5.1  libQt5Concurrent.prl  libQt5Concurrent.so.5.5.1  libQt5Core.prl  libQt5DBus.prl  libQt5Designer.prl  libQt5DesignerComponents.prl  libQt5DesignerComponents.so.5.5.1  libQt5EglDeviceIntegration.prl  libQt5Gui.prl  libQt5Help.prl  libQt5Help.so.5.5.1  libQt5Multimedia.prl  libQt5MultimediaQuick_p.prl  libQt5MultimediaWidgets.prl  libQt5Network.prl  libQt5OpenGL.prl  libQt5OpenGLExtensions.prl  libQt5PlatformSupport.prl  libQt5PrintSupport.prl  libQt5Qml.prl  libQt5QmlDevTools.prl  libQt5Quick.prl  libQt5QuickParticles.prl  libQt5QuickTest.prl  libQt5QuickWidgets.prl  libQt5QuickWidgets.so.5.5.1  libQt5Script.prl  libQt5Script.so.5.5.1  libQt5ScriptTools.prl  libQt5ScriptTools.so.5.5.1  libQt5Sql.prl  (+824 more)
deeprotor-simapp/bundle/usr/sbin/: libgvc6-config-update
deeprotor-simapp/bundle/usr/share/X11/: rgb.txt
deeprotor-simapp/bundle/usr/share/aclocal/: tcl8.6.m4
deeprotor-simapp/bundle/usr/share/dh-python/: dh_pypy  dh_python2  dh_python3  pybuild
deeprotor-simapp/bundle/usr/share/doc/: libprotobuf-dev  libprotoc-dev
deeprotor-simapp/bundle/usr/share/pkgconfig/: eigen3.pc
deeprotor-simapp/bundle/usr/share/zoneinfo/: localtime
deeprotor_ws/src/deeprotor_simulation_environment/: CMakeLists.txt  package.xml
deeprotor_ws/src/deeprotor_simulation_environment/config/: deeprotor_rpi_h264_encoder_config.yaml  deeprotor_stream_config.yaml
deeprotor_ws/src/deeprotor_simulation_environment/launch/: bug_test.launch  distributed_training.launch  drone.launch  drone_with_target.launch  evaluation.launch
deeprotor_ws/src/deeprotor_simulation_environment/scripts/: drone_node.py
deeprotor_ws/src/deeprotor_simulation_environment/srv/: ResetDroneSrv.srv
deeprotor_ws/src/deeprotor_simulation_environment/urdf/: drone.gazebo  drone.xacro  materials.xacro
deeprotor_ws/src/deeprotor_simulation_environment/worlds/: static_red_square_target.world
deeprotor_ws/src/sagemaker_rl_agent/: Dockerfile  README.md  deeprotor_rl.ipynb
deeprotor_ws/src/sagemaker_rl_agent/common/: docker_utils.py
deeprotor_ws/src/sagemaker_rl_agent/src/: setup.py  training_worker.py
deeprotor_ws/src/sagemaker_rl_agent/src/markov/: defaults.py  evaluation_worker.py  rollout_worker.py  utils.py
red_square/: model.config  model.sdf
rl_deeprotor_robomaker_coach_gazebo/: README.md  deeprotor_rl.ipynb
rl_deeprotor_robomaker_coach_gazebo/.ipynb_checkpoints/: deeprotor_rl-checkpoint.ipynb
rl_deeprotor_robomaker_coach_gazebo/src/markov/: defaults.py  s3_boto_data_store.py  s3_simdata_upload.py  utils.py
rl_deeprotor_robomaker_coach_gazebo/src/markov/environments/: deeprotor_env.py
rl_deeprotor_robomaker_coach_gazebo/src/markov/rewards/: default.py
simulation/: setup.sh
(+1394 files in other folders)
