<?xml version="1.0"?>
<package format="2">
  <name>deeprotor_simulation_environment</name>
  <version>0.0.0</version>
  <description>DeepRotor drone simulation adapted from the AWS DeepRacer package</description>
  <maintainer email="kole@cantina.co">Kole Nunley</maintainer>
  <license>Apache2.0</license>
  <url type="website">https://github.com/Kolefn/cantina-autonomous-drone</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>gazebo</build_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <run_depend>aws_cpp_sdk_logs</run_depend>
  <run_depend>aws_cpp_sdk_kinesis</run_depend>
  <run_depend>controller_manager</run_depend>
  <run_depend>gazebo</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>gazebo_ros_control</run_depend>
  <run_depend>gazebo_plugins</run_depend>
  <run_depend>h264_video_encoder</run_depend>
  <run_depend>h264_encoder_core</run_depend>
  <run_depend>kinesis_video_streamer</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>ros_controllers</run_depend>
  <run_depend>ros_control</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>python-shapely</run_depend>
  <run_depend>python-scipy</run_depend>
  <run_depend>python-numpy</run_depend>
  <run_depend>rotors_simulator</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <gazebo_ros gazebo_model_path="${prefix}" />
    <gazebo_ros plugin_path="${prefix}/.." />
  </export>
</package>
