<?xml version="1.0"?>
<package format="2">
  <name>deeprotor_simulation_environment</name>
  <version>0.0.0</version>
  <description>DeepRotor drone simulation adapted from the AWS DeepRacer package</description>
  <maintainer email="kole@cantina.co">Kole Nunley</maintainer>
  <license>Apache2.0</license>
  <url type="website">https://github.com/Kolefn/cantina-autonomous-drone</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>gazebo</build_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <exec_depend>aws_cpp_sdk_logs</exec_depend>
  <exec_depend>aws_cpp_sdk_kinesis</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>gazebo</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>gazebo_ros_control</exec_depend>
  <exec_depend>gazebo_plugins</exec_depend>
  <exec_depend>h264_video_encoder</exec_depend>
  <exec_depend>h264_encoder_core</exec_depend>
  <exec_depend>kinesis_video_streamer</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>ros_controllers</exec_depend>
  <exec_depend>ros_control</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>python-shapely</exec_depend>
  <exec_depend>python-scipy</exec_depend>
  <exec_depend>python-numpy</exec_depend>
  <exec_depend>rotors_simulator</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <gazebo_ros gazebo_model_path="${prefix}" />
    <gazebo_ros plugin_path="${prefix}/.." />
  </export>
</package>
